created a searchbox to filter employees, added design changes

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#70b9ff+0,e5e5e5+100 */
+background: #70b9ff; /* Old browsers */
+background: -moz-linear-gradient(left,  #70b9ff 0%, #e5e5e5 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left,  #70b9ff 0%,#e5e5e5 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right,  #70b9ff 0%,#e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#70b9ff', endColorstr='#e5e5e5',GradientType=1 ); /* IE6-9 */
+
+
+
+
 }
 
 code {
